--- a/about.html
+++ b/about.html
@@ -291,7 +291,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Lawyer, CEO
+                  Chief Executive Officer (CEO)
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -350,7 +350,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Legal Department.
+                  Chief Compliance Officer (CCO)
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -409,13 +409,72 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Chief Financial Officer.
+                  Chief Financial Officer (CFO).
                 </p>
                 <div class="info-agents color-a">
                   <p>
                     <strong>Phone: </strong> +254 713 757795</p>
                   <p>
                     <strong>Email: </strong> selina.kodo@alloninvestments.co.ke</p>
+                </div>
+              </div>
+              <div class="card-footer-d">
+                <div class="socials-footer d-flex justify-content-center">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-dribbble" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="img/members/jes.jpeg" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover">
+              <div class="card-header-d">
+                <div class="card-title-d align-self-center">
+                  <h3 class="title-d">
+                    <a  class="link-two">Jesse Odidi
+                      <!-- <br> Escala</a> -->
+                  </h3>
+                </div>
+              </div>
+              <div class="card-body-d">
+                <p class="content-d color-text-a">
+                  Architect, Chief Operations Officer (COO)
+                </p>
+                <div class="info-agents color-a">
+                  <p>
+                    <strong>Phone: </strong> +254 713 744 764</p>
+                  <p>
+                    <strong>Email: </strong> jesse.odidi<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -527,7 +586,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                 IT Department
+                  Head of ICT Department
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -586,7 +645,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  IT Department
+                  Chief Technical Officer
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -697,14 +756,14 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="#" class="link-two">Naphtal Kwach
+                    <a href="#" class="link-two">Naphtali Kwach
                       <!-- <br> Escala</a> -->
                   </h3>
                 </div>
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Chief Structural Engineer
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -822,7 +881,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Contract Manager
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -881,7 +940,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Physical Planner
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -940,13 +999,72 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Director-Marketing and Sales
                 </p>
                 <div class="info-agents color-a">
                   <p>
                     <strong>Phone: </strong> +254 757 748221</p>
                   <p>
                     <strong>Email: </strong> brian.onunga<br/>@alloninvestments.co.ke</p>
+                </div>
+              </div>
+              <div class="card-footer-d">
+                <div class="socials-footer d-flex justify-content-center">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-dribbble" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="img/members/linus.jpg" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover">
+              <div class="card-header-d">
+                <div class="card-title-d align-self-center">
+                  <h3 class="title-d">
+                    <a class="link-two">Linus Oyugi
+                      <!-- <br> Escala</a> -->
+                  </h3>
+                </div>
+              </div>
+              <div class="card-body-d">
+                <p class="content-d color-text-a">
+                  Legal Counsel
+                </p>
+                <div class="info-agents color-a">
+                  <p>
+                    <strong>Phone: </strong> +254 728 920514</p>
+                  <p>
+                    <strong>Email: </strong> linus.oyugi<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
