--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                   <h2 class="card-title-a">
                     <a href="property-single.html">
                       <!-- 206 Mount -->
-                      <br /> Apprtment Name</a>
+                      <br /> The Mosaic</a>
                   </h2>
                 </div>
                 <div class="card-body-a">
@@ -390,22 +390,22 @@
                 <div class="card-footer-a">
                   <ul class="card-info d-flex justify-content-around">
                     <li>
-                      <h4 class="card-info-title">Area</h4>
-                      <span>340m
-                        <sup>2</sup>
+                      <h4 class="card-info-title">Swimming Pool</h4>
+                      <span>1
+                        <!-- <sup>1</sup> -->
                       </span>
                     </li>
                     <li>
-                      <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
+                      <h4 class="card-info-title">1 bedrooms</h4>
+                      <span>80</span>
                     </li>
                     <li>
-                      <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
+                      <h4 class="card-info-title">2 bedrooms</h4>
+                      <span>100</span>
                     </li>
                     <li>
-                      <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
+                      <h4 class="card-info-title">3 bedrooms</h4>
+                      <span>40</span>
                     </li>
                   </ul>
                 </div>
@@ -594,7 +594,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  CEO
+                  Chief Executive Officer (CEO)
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -654,7 +654,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Chief Financial Officer
+                  Chief Financial Officer (CFO).
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -715,7 +715,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Architect, COO
+                  Architect, Chief Operations Officer (COO)
                 </p>
                 <div class="info-agents color-a">
                   <p>
