--- a/property-grid.html
+++ b/property-grid.html
@@ -249,23 +249,23 @@
                 </div>
                 <div class="card-footer-a">
                   <ul class="card-info d-flex justify-content-around">
-                    <li>
-                      <h4 class="card-info-title">Area</h4>
-                      <span>340m
-                        <sup>2</sup>
+                    <!-- <li>
+                      <h4 class="card-info-title">Swimming Pool</h4>
+                      <span>1
+                        
                       </span>
+                    </li> -->
+                    <li>
+                      <h4 class="card-info-title">1 bedrooms</h4>
+                      <span>80</span>
                     </li>
                     <li>
-                      <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
+                      <h4 class="card-info-title">2 bedrooms</h4>
+                      <span>100</span>
                     </li>
                     <li>
-                      <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
+                      <h4 class="card-info-title">3 bedrooms</h4>
+                      <span>40</span>
                     </li>
                   </ul>
                 </div>
