--- a/property-single.html
+++ b/property-single.html
@@ -189,7 +189,7 @@
       <div class="row">
         <div class="col-md-12 col-lg-8">
           <div class="title-single-box">
-            <h1 class="title-single">Building Name</h1>
+            <h1 class="title-single">The Mosaic</h1>
             <span class="color-text-a">Kisumu, Kenya</span>
           </div>
         </div>
@@ -203,7 +203,7 @@
                 <a href="property-grid.html">Properties</a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
-                Building Name
+                The Mosaic
               </li>
             </ol>
           </nav>
@@ -282,14 +282,34 @@
                 <div class="summary-list">
                   <ul class="list">
                     <li class="d-flex justify-content-between">
-                      <strong>Property ID:</strong>
-                      <span>1134</span>
-                    </li>
-                    <li class="d-flex justify-content-between">
                       <strong>Location:</strong>
-                      <span>Chicago, IL 606543</span>
+                      <span>Kisumu, Kenya</span>
                     </li>
                     <li class="d-flex justify-content-between">
+                      <strong>1 Bedroom (46 m<sup>2</sup>):</strong>
+                      <span>Ksh 4,600,000</span>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <strong>2 Bedroom (70 m<sup>2</sup>):</strong>
+                      <span>Ksh 7,000,000</span>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <strong>2 Bedroom (72 m<sup>2</sup>):</strong>
+                      <span>Ksh 7,200,000</span>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <strong>2 Bedroom (75 m<sup>2</sup>):</strong>
+                      <span>Ksh 7,500,000</span>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <strong>3 Bedroom (112 m<sup>2</sup>):</strong>
+                      <span>Ksh 11,200,000</span>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <strong>3 Bedroom (113 m<sup>2</sup>):</strong>
+                      <span>Ksh 11,300,000</span>
+                    </li>
+                    <!-- <li class="d-flex justify-content-between">
                       <strong>Property Type:</strong>
                       <span>House</span>
                     </li>
@@ -314,7 +334,7 @@
                     <li class="d-flex justify-content-between">
                       <strong>Garage:</strong>
                       <span>1</span>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
@@ -329,16 +349,12 @@
               </div>
               <div class="property-description">
                 <p class="description color-text-a">
-                  Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit
-                  neque, auctor sit amet
-                  aliquam vel, ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta.
-                  Curabitur aliquet quam id dui posuere blandit. Mauris blandit aliquet elit, eget tincidunt
-                  nibh pulvinar quam id dui posuere blandit.
+                  Two-towered apartments with a community center.
+Customizable units.
+
                 </p>
                 <p class="description color-text-a no-margin">
-                  Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget
-                  malesuada. Quisque velit nisi,
-                  pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada.
+                  International spatial relations standards.
                 </p>
               </div>
               <div class="row section-t3">
@@ -350,14 +366,17 @@
               </div>
               <div class="amenities-list color-text-a">
                 <ul class="list-a no-margin">
+                  <li>Swimming pool</li> 
+<li>Laundromat</li>
+<li>Gymnasium</li>
                   <li>Balcony</li>
-                  <li>Outdoor Kitchen</li>
-                  <li>Cable Tv</li>
-                  <li>Deck</li>
-                  <li>Tennis Courts</li>
+                  <!-- <li>Outdoor Kitchen</li> -->
+                  <!-- <li>Cable Tv</li> -->
+                  <!-- <li>Deck</li> -->
+                  <!-- <li>Tennis Courts</li> -->
                   <li>Internet</li>
                   <li>Parking</li>
-                  <li>Sun Room</li>
+                  <!-- <li>Sun Room</li> -->
                   <li>Concrete Flooring</li>
                 </ul>
               </div>
