--- a/agent-single.html
+++ b/agent-single.html
@@ -139,7 +139,8 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a>
+      <!-- <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a> -->
+      <a class="navbar-brand text-brand" href="index.html"><img src="img/allon.png" alt="" ></span></a>
       <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
