--- a/agents-grid.html
+++ b/agents-grid.html
@@ -139,7 +139,8 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a>
+      <!-- <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a> -->
+      <a class="navbar-brand text-brand" href="index.html"><img src="img/allon.png" alt="" ></span></a>
       <!-- <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
@@ -234,7 +235,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 708 912988</p>
+                    <!-- <strong>Phone: </strong> +254 708 912988</p> -->
                   <p>
                     <strong>Email: </strong> elisha.gweth@alloninvestments.co.ke</p>
                 </div>
@@ -293,7 +294,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 714 177324</p>
+                    <!-- <strong>Phone: </strong> +254 714 177324</p> -->
                   <p>
                     <strong>Email: </strong> basil.okello@alloninvestments.co.ke</p>
                 </div>
@@ -352,7 +353,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 713 757795</p>
+                    <!-- <strong>Phone: </strong> +254 713 757795</p> -->
                   <p>
                     <strong>Email: </strong> selina.kodo@alloninvestments.co.ke</p>
                 </div>
@@ -411,9 +412,9 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 713 744 764</p>
+                    <!-- <strong>Phone: </strong> +254 713 744 764</p> -->
                   <p>
-                    <strong>Email: </strong> jesse.odidi<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> jesse<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -470,9 +471,9 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +54 356 945234</p>
+                    <!-- <strong>Phone: </strong> +54 356 945234</p> -->
                   <p>
-                    <strong>Email: </strong> hempstone.nyawanda<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> nyawanda<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -529,7 +530,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +54 356 945234</p>
+                    <!-- <strong>Phone: </strong> +54 356 945234</p> -->
                   <p>
                     <strong>Email: </strong> silas.odhiambo<br/>@alloninvestments.co.ke</p>
                 </div>
@@ -588,7 +589,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 707 591002</p>
+                    <!-- <strong>Phone: </strong> +254 707 591002</p> -->
                   <p>
                     <strong>Email: </strong> wilson.anyonga<br/>@alloninvestments.co.ke</p>
                 </div>
@@ -647,7 +648,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 712 345678</p>
+                    <!-- <strong>Phone: </strong> +254 712 345678</p> -->
                   <p>
                     <strong>Email: </strong> naomi.cheruto<br/>@alloninvestments.co.ke</p>
                 </div>
@@ -765,9 +766,9 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 702 697904</p>
+                    <!-- <strong>Phone: </strong> +254 702 697904</p> -->
                   <p>
-                    <strong>Email: </strong> peter.muchiri<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> zoya@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -820,13 +821,13 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Contract Manager
+                  Quantity Surveyor
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 715 572902</p>
+                    <!-- <strong>Phone: </strong> +254 715 572902</p> -->
                   <p>
-                    <strong>Email: </strong> roy.bartuina<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> bartuina@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -872,7 +873,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a class="link-two">Trevor Musa
+                    <a class="link-two">Trevor Musaa
                       <!-- <br> Escala</a> -->
                   </h3>
                 </div>
@@ -883,9 +884,9 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 702 563381</p>
+                    <!-- <strong>Phone: </strong> +254 702 563381</p> -->
                   <p>
-                    <strong>Email: </strong> trevor.musa<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> trevor.musaa<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -944,7 +945,7 @@
                   <p>
                     <strong>Phone: </strong> +254 757 748221</p>
                   <p>
-                    <strong>Email: </strong> brian.onunga<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> onungabrian@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -1040,6 +1041,67 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="img/members/loice.jpeg" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover">
+              <div class="card-header-d">
+                <div class="card-title-d align-self-center">
+                  <h3 class="title-d">
+                    <a class="link-two">Dr. Loice Loo. 
+                      <!-- <br> Escala</a> -->
+                  </h3>
+                </div>
+              </div>
+              <div class="card-body-d">
+                <p class="content-d color-text-a">
+                  Senior Physical Planner
+                </p>
+                <div class="info-agents color-a">
+                  <p>
+                    <!-- <strong>Phone: </strong> +254 728 920514</p> -->
+                  <p>
+                    <strong>Email: </strong> loice.loo@alloninvestments.co.ke</p>
+                </div>
+              </div>
+              <div class="card-footer-d">
+                <div class="socials-footer d-flex justify-content-center">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-dribbble" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
       <!-- <div class="row">
         <div class="col-sm-12">
