--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,8 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a>
+      <!-- <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a> -->
+      <a class="navbar-brand text-brand" href="index.html"><img src="img/allon.png" alt="" ></span></a>
       <!-- <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
@@ -277,6 +278,13 @@
                     <p class="mb-1">Phone.
                       <span class="color-a">+254 708 912988</span>
                     </p>
+                    <p class="mb-1">P.O. Box 
+                      <span class="color-a">50613-00100, Nairobi.</span>
+                    </p>
+                    <p class="mb-1">P.O. Box 
+                      <span class="color-a">2434-40100, Kisumu.</span>
+                    </p>
+                    
                   </div>
                 </div>
               </div>
@@ -290,9 +298,15 @@
                   </div>
                   <div class="icon-box-content">
                     <p class="mb-1">
-                      Kibuye, Kisumu, Kenya
+                      Ambank House,<br> 13th Floor,<br> Nairobi
                       <!-- <br> EE. UU. -->
                     </p>
+                    <br>
+                    <p class="mb-1">
+                      Wastahili Complex, <br> Nerhu Road,<br> Kisumu
+                      <!-- <br> EE. UU. -->
+                    </p>
+
                   </div>
                 </div>
               </div>
