--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Allon Investments Bootstrap Template</title>
+  <title>Allon Investments</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -139,7 +139,9 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a>
+      <!-- <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a> -->
+      <a class="navbar-brand text-brand" href="index.html"><img src="img/allon.png" alt="" ></span></a>
+      
       <!-- <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
@@ -598,7 +600,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 708 912988</p>
+                    <!-- <strong>Phone: </strong> +254 708 912988</p> -->
                   <p>
                     <strong>Email: </strong> elisha.gweth@alloninvestments.co.ke</p>
                 </div>
@@ -658,7 +660,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 713 757795</p>
+                    <!-- <strong>Phone: </strong> +254 713 757795</p> -->
                   <p>
                     <strong>Email: </strong> selina.kodo@alloninvestments.co.ke</p>
                 </div>
@@ -719,9 +721,9 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 713 744 764</p>
+                    <!-- <strong>Phone: </strong> +254 713 744 764</p> -->
                   <p>
-                    <strong>Email: </strong> jesse.odidi<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> jesse@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
