--- a/property-grid.html
+++ b/property-grid.html
@@ -139,7 +139,8 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a>
+      <!-- <a class="navbar-brand text-brand" href="index.html">Allon<span class="color-b">Investments</span></a> -->
+      <a class="navbar-brand text-brand" href="index.html"><img src="img/allon.png" alt="" ></span></a>
       <!-- <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
@@ -190,7 +191,7 @@
         <div class="col-md-12 col-lg-8">
           <div class="title-single-box">
             <h1 class="title-single">Our Amazing Properties</h1>
-            <span class="color-text-a">Grid Properties</span>
+            <!-- <span class="color-text-a">Grid Properties</span> -->
           </div>
         </div>
         <div class="col-md-12 col-lg-4">
