--- a/property-single.html
+++ b/property-single.html
@@ -354,9 +354,14 @@
 Customizable units.
 
                 </p>
+                
                 <p class="description color-text-a no-margin">
                   International spatial relations standards.
                 </p>
+                <br>
+                <!-- Auto width -->
+                <a href="./img/broch.pdf" download>
+<button class="btn"><i class="fa fa-download"></i> Download Brochure</button></a>
               </div>
               <div class="row section-t3">
                 <div class="col-sm-12">
