--- a/agents-grid.html
+++ b/agents-grid.html
@@ -707,7 +707,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 712 345678</p>
+                    <!-- <strong>Phone: </strong> +254 712 345678</p> -->
                   <p>
                     <strong>Email: </strong> naphtal.kwach<br/>@alloninvestments.co.ke</p>
                 </div>
