--- a/about.html
+++ b/about.html
@@ -471,7 +471,7 @@ construction, all in one place.
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a  class="link-two">Jesse Odidi
+                    <a  class="link-two">Jesse Owala
                       <!-- <br> Escala</a> -->
                   </h3>
                 </div>
