--- a/agents-grid.html
+++ b/agents-grid.html
@@ -401,7 +401,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a  class="link-two">Jesse Odidi
+                    <a  class="link-two">Jesse Owala
                       <!-- <br> Escala</a> -->
                   </h3>
                 </div>
