--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
                     <!-- <a href="agent-single.html" class="link-two">Jesse Odidi -->
-                      <a class="link-two">Jesse Odidi
+                      <a class="link-two">Jesse Owala
                       <!-- <br> Cascada -->
                     </a>
                   </h3>
