--- a/property-single.html
+++ b/property-single.html
@@ -397,7 +397,23 @@ Customizable units.
             </li> -->
             <li class="nav-item">
               <a class="nav-link active" id="pills-plans-tab" data-toggle="pill" href="#pills-plans" role="tab" aria-controls="pills-plans"
-                aria-selected="false">Floor Plans</a>
+                aria-selected="false">1 Bedroom</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-plans-tab2" data-toggle="pill" href="#pills-plans2" role="tab" aria-controls="pills-plans"
+                aria-selected="false">2 Bedroom</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-plans-tab3" data-toggle="pill" href="#pills-plans3" role="tab" aria-controls="pills-plans"
+                aria-selected="false">3 Bedroom</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-plans-tab4" data-toggle="pill" href="#pills-plans4" role="tab" aria-controls="pills-plans"
+                aria-selected="false">Masterplan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-plans-tab5" data-toggle="pill" href="#pills-plans5" role="tab" aria-controls="pills-plans"
+                aria-selected="false">Community Center</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="pills-map-tab" data-toggle="pill" href="#pills-map" role="tab" aria-controls="pills-map"
@@ -410,7 +426,19 @@ Customizable units.
                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div> -->
             <div class="tab-pane fade show active" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
-              <img src="img/plan2.jpg" alt="" class="img-fluid">
+              <img src="img/drawings/1_bedroom.png" alt="" class="img-fluid">
+            </div>
+            <div class="tab-pane fade" id="pills-plans2" role="tabpanel" aria-labelledby="pills-plans-tab2">
+              <img src="img/drawings/2_bedroom.png" alt="" class="img-fluid">
+            </div>
+            <div class="tab-pane fade" id="pills-plans3" role="tabpanel" aria-labelledby="pills-plans-tab3">
+              <img src="img/drawings/3_bedroom.png" alt="" class="img-fluid">
+            </div>
+            <div class="tab-pane fade" id="pills-plans4" role="tabpanel" aria-labelledby="pills-plans-tab4">
+              <img src="img/drawings/master_plan.png" alt="" class="img-fluid">
+            </div>
+            <div class="tab-pane fade" id="pills-plans5" role="tabpanel" aria-labelledby="pills-plans-tab5">
+              <img src="img/drawings/community_centre.png" alt="" class="img-fluid">
             </div>
             <div class="tab-pane fade" id="pills-map" role="tabpanel" aria-labelledby="pills-map-tab">
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834"
